<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timeTakenTVLabelMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginBottom="32dp"
        android:text="@string/time_taken"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timerCMMain"
        app:layout_constraintStart_toStartOf="parent" />

    <Chronometer
        android:id="@+id/timerCMMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeTakenTVLabelMain" />

    <TextView
        android:id="@+id/appNameTVLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/app_name"
        android:textColor="@color/title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/howToUseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:gravity="center"
        android:text="@string/how_to_use"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTVLabel" />

    <TextView
        android:id="@+id/currentLongTVLabel"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/current_long"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/currentLatTVLabel"
        app:layout_constraintEnd_toStartOf="@+id/currentLatTV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentLongTV"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/currentLatTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentLatTVLabel" />

    <TextView
        android:id="@+id/currentLatTVLabel"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="32dp"
        android:text="@string/current_lat"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/trackerSW"
        app:layout_constraintEnd_toStartOf="@+id/currentLongTV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentLatTV"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/trackerSW"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentLongTVLabel" />

    <Switch
        android:id="@+id/trackerSW"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/goToTreasureActivityBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToTreasureActivityBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="32dp"
        android:text="@string/treasure_activity_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/timeTakenTVLabelMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>